--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gilbarbara/react-range-slider": "^0.4.4",
+    "i": "^0.3.6",
+    "npm": "^6.10.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-rangeslider": "^2.2.0",
